添加公共工具类及头尾模版

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<%= require('html-loader!./layout/html-head.html') %>
+<head>
+    <title>电商平台</title>
+  <%= require('html-loader!./layout/common-head.html') %>
+</head>
 <body>
-<script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-<h2>kfjdkajlfkdj!!</h2>
+
+
+<%= require('html-loader!./layout/common-footer.html') %>
 </body>
 </html>
