--- a/src/view/index.html
+++ b/src/view/index.html
@@ -5,7 +5,7 @@
   <%= require('html-loader!./layout/common-head.html') %>
 </head>
 <body>
-
+<i class="fa fa-user"></i>
 
 <%= require('html-loader!./layout/common-footer.html') %>
 </body>
