--- a/src/view/index.html
+++ b/src/view/index.html
@@ -5,7 +5,8 @@
   <%= require('html-loader!./layout/common-head.html') %>
 </head>
 <body>
-<i class="fa fa-user"></i>
+<%= require('html-loader!./layout/nav.html') %>
+<%= require('html-loader!./layout/nav-simple.html') %>
 
 <%= require('html-loader!./layout/common-footer.html') %>
 </body>
