--- a/src/page/common/layout.css
+++ b/src/page/common/layout.css
@@ -22,7 +22,7 @@ label{
     cursor: pointer;
 }
 body{
-    background: #f6f6f6;
+    background: #ffff;
     font: 12px/1.5 tahoma, Helvetica, Arial, sans-serif,Microsoft YaHei ;
 }
 /* 定宽布局 */
