--- a/src/view/layout/common-footer.html
+++ b/src/view/layout/common-footer.html
@@ -1,1 +1,11 @@
+<div class="footer">
+    <div class="w">
+        <div class="links">
+            <a href="http://www.baidu.com" class="link" target="_blank">百度</a>
+            <a href="http://www.google.com" class="link" target="_blank">谷歌</a>
+            <a href="https://www.taobao.com" class="link" target="_blank">淘宝</a>
+            <a href="https://www.jd.com" class="link" target="_blank">京东</a>
+        </div>
+    </div>
+</div>
 <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
