--- a/src/view/layout/nav.html
+++ b/src/view/layout/nav.html
@@ -9,8 +9,26 @@
                 <span class="link ">欢迎，
                     <span class="username"></span>
                 </span>
-                <span class="link">退出</span>
+                <span class="link js-loginout">退出</span>
             </span>
         </div>
+        <ul class="nav-list">
+            <li class="nav-item">
+                <a href="javascript:" class="link">
+                    <i class="fa fa-shopping-cart "></i>
+                    购物车( <span class="cart-cont">0</span> )
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="./order-list.html" class="link">我的订单</a>
+            </li>
+            <li class="nav-item">
+                <a href="./user-center.html" class="link">我的MMALL</a>
+            </li>
+            <li class="nav-item">
+                <a href="./about.html" class="link">关于MMALL</a>
+            </li>
+
+        </ul>
     </div>
 </div>
